config-root/policies/psp-host-network-ports.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
  annotations:
    description: "Restricts containers from rnuning with the `hostNetwork` flag set to `true`."
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    hostNetwork: true
